<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BrainTrainers</string>
    <string name="play_button">Play!</string>
    <string name="options_button">Options</string>
    <string name="help_button">Help</string>
    <string name="lights_of_title">Lights off</string>
    <string name="lights_off_rules_textView">Turn all bulbs off. Pressing any of the lights will toggle it and the four adjacent lights. The goal of the puzzle is to switch all the lights off, preferably in as few button presses as possible.</string>
    <string name="lock_title">Unlock</string>
    <string name="lock_rules_textView">Unlock all cells by clicking on them. Click on lock to change it\'s state. But be careful! Because every time you invert the state of the cell, all items in the same row and column will invert the state too.</string>
    <string name="barleyBreak_title">n-Puzzle</string>
    <string name="barleyBreak_rules_textView">Arrange the numbers in ascending order. Try to make as little as possible moves.</string>
    <string name="choose_game_textView">Game</string>
    <string name="select_difficulty_textView">Difficulty</string>
    <string name="beginner_radioButton">Beginner</string>
    <string name="advanced_radioButton">Advanced</string>
    <string name="expert_radioButton">Expert</string>
    <string name="go_button">Go!</string>

    <string name="options_textView">Options</string>
    <string name="music_textView">Music</string>
    <string name="on_radioButton">On</string>
    <string name="off_radioButton">Off</string>
    <string name="sound_textView">Sound</string>

    <string name="amount_of_moves">Moves: </string>
    <string name="win_title">You win! </string>
    <string name="win_message">Your result is </string>
    <string name="choose_another_game_title">Another game</string>
    <string name="play_again_title">Play again</string>

    <string name="mute_msg_text">Do you want to play music in silent mode?</string>
    <string name="mute_msg_yes">Yes</string>
    <string name="mute_msg_no">No</string>

</resources>