<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/play_button"
            style="@style/OrangeButtonStyle"
            android:text="@string/play_button" />

        <Button
            android:id="@+id/options_button"
            style="@style/WhiteButtonStyle"
            android:text="@string/options_button" />

        <Button
            android:id="@+id/help_button"
            style="@style/WhiteButtonStyle"
            android:text="@string/help_button" />
    </LinearLayout>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="128dp"
        android:layout_gravity="top|left"
        android:src="@drawable/bulb" />

    <ImageView
        android:layout_width="147dp"
        android:layout_height="144dp"
        android:layout_gravity="bottom|right"
        android:src="@drawable/question_mark" />

</FrameLayout>