<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    style="@style/BackgroundStyle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/options_textView"
        style="@style/OrangeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_textView"
        />

    <TextView
        android:id="@+id/music_textView"
        style="@style/TitleStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/music_textView" />

    <RadioGroup
        android:id="@+id/on_off_music_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/on_music_radioButton"
            style="@style/TextStyleBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:button="@drawable/custom_radio_selector"
            android:text="@string/on_radioButton" />

        <RadioButton
            android:id="@+id/off_music_radioButton"
            style="@style/TextStyleBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:button="@drawable/custom_radio_selector"
            android:text="@string/off_radioButton" />
    </RadioGroup>

    <TextView
        android:id="@+id/sound_textView"
        style="@style/TitleStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sound_textView" />

    <RadioGroup
        android:id="@+id/on_off_sound_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/on_sound_radioButton"
            style="@style/TextStyleBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:button="@drawable/custom_radio_selector"
            android:text="@string/on_radioButton" />

        <RadioButton
            android:id="@+id/off_sound_radioButton"
            style="@style/TextStyleBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:button="@drawable/custom_radio_selector"
            android:text="@string/off_radioButton" />

    </RadioGroup>

</LinearLayout>